--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
+    body { font-family: 'Poppins', sans-serif; }
+    #preview { display: none; max-width: 100%; border-radius: 12px; margin: 1rem auto; }
+    #btnBaterPonto:disabled { background-color: #a5f3fc; cursor: not-allowed; }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
   <script>
@@ -25,11 +25,13 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
+    const storage = firebase.storage();
   </script>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-xl bg-white p-6 rounded-2xl shadow-xl">
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Registro de Ponto</h1>
+
     <div class="space-y-4">
       <div class="text-center">
         <p><strong>Usuário:</strong> <span id="nomeUsuario"></span></p>
@@ -37,8 +39,14 @@
         <p><strong>Horário:</strong> <span id="horaAtual"></span></p>
       </div>
 
+      <div class="text-center">
+        <input type="file" accept="image/*" capture="user" id="selfieInput" class="hidden" />
+        <button onclick="document.getElementById('selfieInput').click()" class="bg-indigo-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-600">Capturar Selfie</button>
+        <img id="preview" />
+      </div>
+
       <div class="flex justify-center">
-        <button onclick="capturarERegistrar()" class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
+        <button id="btnBaterPonto" onclick="baterPonto()" disabled class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
           Bater Ponto
         </button>
       </div>
@@ -46,16 +54,12 @@
       <div class="text-center mt-4">
         <p id="mensagem" class="text-sm font-medium"></p>
       </div>
-
-      <div class="hidden">
-        <video id="video" autoplay></video>
-        <canvas id="canvas" style="display:none;"></canvas>
-      </div>
     </div>
   </div>
 
   <script>
     let user = null;
+    let selfieFile = null;
 
     auth.onAuthStateChanged(async (u) => {
       if (!u) {
@@ -77,6 +81,21 @@
     setInterval(atualizarHora, 1000);
     atualizarHora();
 
+    document.getElementById("selfieInput").addEventListener("change", (event) => {
+      const file = event.target.files[0];
+      if (file) {
+        selfieFile = file;
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          const img = document.getElementById("preview");
+          img.src = e.target.result;
+          img.style.display = "block";
+        };
+        reader.readAsDataURL(file);
+        document.getElementById("btnBaterPonto").disabled = false;
+      }
+    });
+
     function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
       const R = 6371e3;
       const rad = Math.PI / 180;
@@ -88,7 +107,7 @@
     }
 
     function classificarBatida(horaAtual) {
-      const [h, m] = horaAtual.split(":").map(Number);
+      const [h, m] = horaAtual.split(":" ).map(Number);
       const totalMin = h * 60 + m;
       if (totalMin >= 300 && totalMin < 480) return "entrada";
       if (totalMin >= 720 && totalMin < 840) return "saida_almoco";
@@ -97,66 +116,52 @@
       return "extra";
     }
 
-    async function capturarERegistrar() {
-      try {
-        const video = document.getElementById("video");
-        const canvas = document.getElementById("canvas");
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        video.srcObject = stream;
-
-        await new Promise((resolve) => setTimeout(resolve, 1000));
-
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext("2d").drawImage(video, 0, 0);
-
-        const imagemDataUrl = canvas.toDataURL("image/jpeg");
-        stream.getTracks().forEach(track => track.stop());
-
-        obterLocalizacao(imagemDataUrl);
-      } catch (error) {
-        alert("Erro ao acessar a câmera: " + error.message);
+    async function baterPonto() {
+      if (!selfieFile) {
+        alert("Capture uma selfie antes de bater o ponto.");
+        return;
       }
-    }
 
-    function obterLocalizacao(imagemDataUrl) {
       if (!navigator.geolocation) {
         alert("Geolocalização não suportada.");
         return;
       }
 
-      navigator.geolocation.getCurrentPosition(
-        position => registrarPonto(position, imagemDataUrl),
-        error => alert("Erro ao obter localização: " + error.message)
-      );
-    }
+      navigator.geolocation.getCurrentPosition(async (position) => {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+        const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
+        const data = new Date().toLocaleDateString('pt-BR');
+        const classificacao = classificarBatida(hora);
+        const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.597776, -46.64343);
+        const localizacaoOk = distancia <= 200;
 
-    async function registrarPonto(position, imagemDataUrl) {
-      const latitude = position.coords.latitude;
-      const longitude = position.coords.longitude;
-      const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
-      const data = new Date().toLocaleDateString('pt-BR');
-      const classificacao = classificarBatida(hora);
+        const storageRef = storage.ref().child(`selfies/${user.uid}_${Date.now()}.jpg`);
+        await storageRef.put(selfieFile);
+        const selfieURL = await storageRef.getDownloadURL();
 
-      const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.597776, -46.64343);
-      const localizacaoOk = distancia <= 200;
+        const registro = {
+          uid: user.uid,
+          nome: document.getElementById("nomeUsuario").textContent,
+          setor: document.getElementById("setorUsuario").textContent,
+          horario: hora,
+          data,
+          classificacao,
+          latitude,
+          longitude,
+          localizacaoOk,
+          selfieURL
+        };
 
-      const registro = {
-        uid: user.uid,
-        nome: document.getElementById("nomeUsuario").textContent,
-        setor: document.getElementById("setorUsuario").textContent,
-        horario: hora,
-        data,
-        classificacao,
-        latitude,
-        longitude,
-        localizacaoOk,
-        selfie: imagemDataUrl
-      };
+        await db.collection("registros").add(registro);
 
-      await db.collection("registros").add(registro);
-      document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
-      document.getElementById("mensagem").className = "text-green-600 font-semibold";
+        document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
+        document.getElementById("mensagem").className = "text-green-600 font-semibold";
+        document.getElementById("btnBaterPonto").disabled = true;
+        document.getElementById("preview").style.display = "none";
+      }, (error) => {
+        alert("Erro ao obter localização: " + error.message);
+      });
     }
   </script>
 </body>
