--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    #preview { display: none; max-width: 100%; border-radius: 12px; margin: 1rem auto; }
+    video { display: none; border-radius: 12px; width: 100%; max-width: 400px; margin: 1rem auto; }
+    #preview { display: none; border-radius: 12px; max-width: 400px; margin: 1rem auto; }
     #btnBaterPonto:disabled { background-color: #a5f3fc; cursor: not-allowed; }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
@@ -31,35 +32,35 @@
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-xl bg-white p-6 rounded-2xl shadow-xl">
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Registro de Ponto</h1>
+    <div class="text-center mb-4">
+      <p><strong>Usuário:</strong> <span id="nomeUsuario">-</span></p>
+      <p><strong>Setor:</strong> <span id="setorUsuario">-</span></p>
+      <p><strong>Horário:</strong> <span id="horaAtual">--:--</span></p>
+    </div>
 
-    <div class="space-y-4">
-      <div class="text-center">
-        <p><strong>Usuário:</strong> <span id="nomeUsuario"></span></p>
-        <p><strong>Setor:</strong> <span id="setorUsuario"></span></p>
-        <p><strong>Horário:</strong> <span id="horaAtual"></span></p>
-      </div>
+    <div class="flex flex-col items-center space-y-3">
+      <video id="camera" autoplay playsinline></video>
+      <canvas id="canvas" style="display: none;"></canvas>
+      <img id="preview" />
+      <button onclick="capturarFoto()" id="btnCaptura" class="bg-indigo-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-600 hidden">📸 Capturar Selfie</button>
+      <button onclick="baterPonto()" id="btnBaterPonto" disabled class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
+        ✅ Bater Ponto
+      </button>
+    </div>
 
-      <div class="text-center">
-        <input type="file" accept="image/*" capture="user" id="selfieInput" class="hidden" />
-        <button onclick="document.getElementById('selfieInput').click()" class="bg-indigo-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-600">Capturar Selfie</button>
-        <img id="preview" />
-      </div>
-
-      <div class="flex justify-center">
-        <button id="btnBaterPonto" onclick="baterPonto()" disabled class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
-          Bater Ponto
-        </button>
-      </div>
-
-      <div class="text-center mt-4">
-        <p id="mensagem" class="text-sm font-medium"></p>
-      </div>
+    <div class="text-center mt-4">
+      <p id="mensagem" class="text-sm font-medium text-gray-700"></p>
     </div>
   </div>
 
   <script>
     let user = null;
-    let selfieFile = null;
+    let selfieBlob = null;
+    let localizacaoOk = false;
+
+    const LATITUDE_EMPRESA = -23.47789;
+    const LONGITUDE_EMPRESA = -46.65078;
+    const RAIO_METROS = 30;
 
     auth.onAuthStateChanged(async (u) => {
       if (!u) {
@@ -76,25 +77,10 @@
     function atualizarHora() {
       const agora = new Date();
       const hora = agora.toLocaleTimeString('pt-BR', { hour12: false });
-      document.getElementById('horaAtual').textContent = hora;
+      document.getElementById("horaAtual").textContent = hora;
     }
     setInterval(atualizarHora, 1000);
     atualizarHora();
-
-    document.getElementById("selfieInput").addEventListener("change", (event) => {
-      const file = event.target.files[0];
-      if (file) {
-        selfieFile = file;
-        const reader = new FileReader();
-        reader.onload = (e) => {
-          const img = document.getElementById("preview");
-          img.src = e.target.result;
-          img.style.display = "block";
-        };
-        reader.readAsDataURL(file);
-        document.getElementById("btnBaterPonto").disabled = false;
-      }
-    });
 
     function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
       const R = 6371e3;
@@ -109,71 +95,97 @@
     function classificarBatida(horaAtual) {
       const [h, m] = horaAtual.split(":").map(Number);
       const totalMin = h * 60 + m;
-      if (totalMin >= 300 && totalMin < 480) return "entrada";
-      if (totalMin >= 720 && totalMin < 840) return "saida_almoco";
-      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco";
-      if (totalMin >= 960 && totalMin < 1140) return "saida";
+      if (totalMin >= 300 && totalMin < 480) return "entrada"; // 5h - 8h
+      if (totalMin >= 720 && totalMin < 840) return "saida_almoco"; // 12h - 14h
+      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco"; // 13h - 16h
+      if (totalMin >= 960 && totalMin < 1140) return "saida"; // 16h - 19h
       return "extra";
     }
 
-    async function baterPonto() {
-      try {
-        if (!user) {
-          alert("Usuário não autenticado.");
-          return;
-        }
-
-        if (!selfieFile) {
-          alert("Capture uma selfie antes de bater o ponto.");
-          return;
-        }
-
-        if (!navigator.geolocation) {
-          alert("Geolocalização não suportada.");
-          return;
-        }
-
-        navigator.geolocation.getCurrentPosition(async (position) => {
-          const latitude = position.coords.latitude;
-          const longitude = position.coords.longitude;
-          const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
-          const data = new Date().toLocaleDateString('pt-BR');
-          const classificacao = classificarBatida(hora);
-          const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.597776, -46.64343);
-          const localizacaoOk = distancia <= 200;
-
-          const storageRef = storage.ref().child(`selfies/${user.uid}_${Date.now()}.jpg`);
-          await storageRef.put(selfieFile);
-          const selfieURL = await storageRef.getDownloadURL();
-
-          const registro = {
-            uid: user.uid,
-            nome: document.getElementById("nomeUsuario").textContent,
-            setor: document.getElementById("setorUsuario").textContent,
-            horario: hora,
-            data,
-            classificacao,
-            latitude,
-            longitude,
-            localizacaoOk,
-            selfieURL
-          };
-
-          await db.collection("registros").add(registro);
-
-          document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
-          document.getElementById("mensagem").className = "text-green-600 font-semibold";
-          document.getElementById("btnBaterPonto").disabled = true;
-          document.getElementById("preview").style.display = "none";
-          selfieFile = null;
-        }, (error) => {
-          alert("Erro ao obter localização: " + error.message);
-        });
-      } catch (error) {
-        console.error("Erro ao bater ponto:", error);
-        alert("Ocorreu um erro ao bater o ponto. Tente novamente.");
+    async function verificarLocalizacao() {
+      if (!navigator.geolocation) {
+        alert("Seu dispositivo não suporta geolocalização.");
+        return;
       }
+
+      navigator.geolocation.getCurrentPosition(async (position) => {
+        const lat = position.coords.latitude;
+        const lon = position.coords.longitude;
+        const distancia = calcularDistanciaEmMetros(lat, lon, LATITUDE_EMPRESA, LONGITUDE_EMPRESA);
+        localizacaoOk = distancia <= RAIO_METROS;
+
+        if (!localizacaoOk) {
+          alert("Você está fora da área permitida para bater ponto.");
+        } else {
+          iniciarCamera();
+        }
+      }, (error) => {
+        alert("Erro ao obter localização: " + error.message);
+      });
     }
+
+    function iniciarCamera() {
+      const video = document.getElementById("camera");
+      const btnCaptura = document.getElementById("btnCaptura");
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then(stream => {
+          video.srcObject = stream;
+          video.style.display = "block";
+          btnCaptura.classList.remove("hidden");
+        })
+        .catch(() => {
+          alert("Erro ao acessar câmera.");
+        });
+    }
+
+    function capturarFoto() {
+      const video = document.getElementById("camera");
+      const canvas = document.getElementById("canvas");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      canvas.getContext("2d").drawImage(video, 0, 0);
+      canvas.toBlob(blob => {
+        selfieBlob = blob;
+        const preview = document.getElementById("preview");
+        preview.src = URL.createObjectURL(blob);
+        preview.style.display = "block";
+        document.getElementById("btnBaterPonto").disabled = false;
+      }, 'image/jpeg');
+    }
+
+    async function baterPonto() {
+      if (!selfieBlob || !localizacaoOk) {
+        alert("Erro: selfie ou localização não confirmada.");
+        return;
+      }
+
+      const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
+      const data = new Date().toLocaleDateString('pt-BR');
+      const classificacao = classificarBatida(hora);
+
+      const storageRef = storage.ref().child(`selfies/${user.uid}_${Date.now()}.jpg`);
+      await storageRef.put(selfieBlob);
+      const selfieURL = await storageRef.getDownloadURL();
+
+      const registro = {
+        uid: user.uid,
+        nome: document.getElementById("nomeUsuario").textContent,
+        setor: document.getElementById("setorUsuario").textContent,
+        horario: hora,
+        data,
+        classificacao,
+        selfieURL,
+        localizacaoOk
+      };
+
+      await db.collection("registros").add(registro);
+      document.getElementById("mensagem").textContent = `Ponto registrado com sucesso às ${hora} como "${classificacao.toUpperCase()}"`;
+      document.getElementById("mensagem").className = "text-green-600 font-semibold";
+      document.getElementById("btnBaterPonto").disabled = true;
+    }
+
+    // Início automático após carregamento
+    window.onload = verificarLocalizacao;
   </script>
 </body>
 </html>
