--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    video { display: none; border-radius: 12px; width: 100%; max-width: 400px; margin: 1rem auto; }
-    #preview { display: none; border-radius: 12px; max-width: 400px; margin: 1rem auto; }
+    #preview { max-width: 100%; border-radius: 12px; margin: 1rem auto; height: auto; }
     #btnBaterPonto:disabled { background-color: #a5f3fc; cursor: not-allowed; }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
@@ -32,41 +31,41 @@
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-xl bg-white p-6 rounded-2xl shadow-xl">
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Registro de Ponto</h1>
-    <div class="text-center mb-4">
-      <p><strong>Usuário:</strong> <span id="nomeUsuario">-</span></p>
-      <p><strong>Setor:</strong> <span id="setorUsuario">-</span></p>
-      <p><strong>Horário:</strong> <span id="horaAtual">--:--</span></p>
-    </div>
 
-    <div class="flex flex-col items-center space-y-3">
-      <video id="camera" autoplay playsinline></video>
-      <canvas id="canvas" style="display: none;"></canvas>
-      <img id="preview" />
-      <button onclick="capturarFoto()" id="btnCaptura" class="bg-indigo-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-600 hidden">📸 Capturar Selfie</button>
-      <button onclick="baterPonto()" id="btnBaterPonto" disabled class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
-        ✅ Bater Ponto
-      </button>
-    </div>
+    <div class="space-y-4">
+      <div class="text-center">
+        <p><strong>Usuário:</strong> <span id="nomeUsuario"></span></p>
+        <p><strong>Setor:</strong> <span id="setorUsuario"></span></p>
+        <p><strong>Horário:</strong> <span id="horaAtual"></span></p>
+      </div>
 
-    <div class="text-center mt-4">
-      <p id="mensagem" class="text-sm font-medium text-gray-700"></p>
+      <div class="text-center">
+        <video id="camera" autoplay playsinline class="w-full rounded-xl mb-2"></video>
+        <canvas id="canvas" class="hidden"></canvas>
+        <img id="preview" class="hidden" />
+        <button id="btnCapturar" class="bg-indigo-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-indigo-600">
+          📸 Capturar Selfie
+        </button>
+      </div>
+
+      <div class="flex justify-center">
+        <button id="btnBaterPonto" disabled onclick="baterPonto()" class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
+          ✅ Bater Ponto
+        </button>
+      </div>
+
+      <div class="text-center mt-4">
+        <p id="mensagem" class="text-sm font-medium"></p>
+      </div>
     </div>
   </div>
 
   <script>
     let user = null;
     let selfieBlob = null;
-    let localizacaoOk = false;
-
-    const LATITUDE_EMPRESA = -23.47789;
-    const LONGITUDE_EMPRESA = -46.65078;
-    const RAIO_METROS = 30;
 
     auth.onAuthStateChanged(async (u) => {
-      if (!u) {
-        window.location.href = "login.html";
-        return;
-      }
+      if (!u) return window.location.href = "login.html";
       user = u;
       const doc = await db.collection("funcionarios").doc(user.uid).get();
       const data = doc.data();
@@ -76,116 +75,86 @@
 
     function atualizarHora() {
       const agora = new Date();
-      const hora = agora.toLocaleTimeString('pt-BR', { hour12: false });
-      document.getElementById("horaAtual").textContent = hora;
+      document.getElementById('horaAtual').textContent = agora.toLocaleTimeString('pt-BR', { hour12: false });
     }
     setInterval(atualizarHora, 1000);
     atualizarHora();
 
-    function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
-      const R = 6371e3;
-      const rad = Math.PI / 180;
-      const dLat = (lat2 - lat1) * rad;
-      const dLon = (lon2 - lon1) * rad;
-      const a = Math.sin(dLat / 2) ** 2 + Math.cos(lat1 * rad) * Math.cos(lat2 * rad) * Math.sin(dLon / 2) ** 2;
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-      return R * c;
-    }
+    const video = document.getElementById("camera");
+    const canvas = document.getElementById("canvas");
+    const preview = document.getElementById("preview");
+    const btnBater = document.getElementById("btnBaterPonto");
 
-    function classificarBatida(horaAtual) {
-      const [h, m] = horaAtual.split(":").map(Number);
-      const totalMin = h * 60 + m;
-      if (totalMin >= 300 && totalMin < 480) return "entrada"; // 5h - 8h
-      if (totalMin >= 720 && totalMin < 840) return "saida_almoco"; // 12h - 14h
-      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco"; // 13h - 16h
-      if (totalMin >= 960 && totalMin < 1140) return "saida"; // 16h - 19h
-      return "extra";
-    }
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => video.srcObject = stream)
+      .catch(error => alert("Erro ao acessar a câmera: " + error.message));
 
-    async function verificarLocalizacao() {
-      if (!navigator.geolocation) {
-        alert("Seu dispositivo não suporta geolocalização.");
-        return;
-      }
-
-      navigator.geolocation.getCurrentPosition(async (position) => {
-        const lat = position.coords.latitude;
-        const lon = position.coords.longitude;
-        const distancia = calcularDistanciaEmMetros(lat, lon, LATITUDE_EMPRESA, LONGITUDE_EMPRESA);
-        localizacaoOk = distancia <= RAIO_METROS;
-
-        if (!localizacaoOk) {
-          alert("Você está fora da área permitida para bater ponto.");
-        } else {
-          iniciarCamera();
-        }
-      }, (error) => {
-        alert("Erro ao obter localização: " + error.message);
-      });
-    }
-
-    function iniciarCamera() {
-      const video = document.getElementById("camera");
-      const btnCaptura = document.getElementById("btnCaptura");
-      navigator.mediaDevices.getUserMedia({ video: true })
-        .then(stream => {
-          video.srcObject = stream;
-          video.style.display = "block";
-          btnCaptura.classList.remove("hidden");
-        })
-        .catch(() => {
-          alert("Erro ao acessar câmera.");
-        });
-    }
-
-    function capturarFoto() {
-      const video = document.getElementById("camera");
-      const canvas = document.getElementById("canvas");
+    document.getElementById("btnCapturar").addEventListener("click", () => {
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
       canvas.getContext("2d").drawImage(video, 0, 0);
       canvas.toBlob(blob => {
         selfieBlob = blob;
-        const preview = document.getElementById("preview");
         preview.src = URL.createObjectURL(blob);
-        preview.style.display = "block";
-        document.getElementById("btnBaterPonto").disabled = false;
-      }, 'image/jpeg');
+        preview.classList.remove("hidden");
+        btnBater.disabled = false;
+      }, "image/jpeg");
+    });
+
+    function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
+      const R = 6371e3, rad = Math.PI / 180;
+      const dLat = (lat2 - lat1) * rad;
+      const dLon = (lon2 - lon1) * rad;
+      const a = Math.sin(dLat / 2) ** 2 + Math.cos(lat1 * rad) * Math.cos(lat2 * rad) * Math.sin(dLon / 2) ** 2;
+      return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    }
+
+    function classificarBatida(horaAtual) {
+      const [h, m] = horaAtual.split(":" ).map(Number);
+      const totalMin = h * 60 + m;
+      if (totalMin >= 300 && totalMin < 480) return "entrada";
+      if (totalMin >= 720 && totalMin < 840) return "saida_almoco";
+      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco";
+      if (totalMin >= 960 && totalMin < 1140) return "saida";
+      return "extra";
     }
 
     async function baterPonto() {
-      if (!selfieBlob || !localizacaoOk) {
-        alert("Erro: selfie ou localização não confirmada.");
-        return;
-      }
+      if (!selfieBlob) return alert("Capture uma selfie antes de bater o ponto.");
 
-      const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
-      const data = new Date().toLocaleDateString('pt-BR');
-      const classificacao = classificarBatida(hora);
+      navigator.geolocation.getCurrentPosition(async (pos) => {
+        const { latitude, longitude } = pos.coords;
+        const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.47789, -46.65078);
+        const localizacaoOk = distancia <= 30;
+        const agora = new Date();
+        const hora = agora.toLocaleTimeString('pt-BR', { hour12: false });
+        const data = agora.toLocaleDateString('pt-BR');
+        const classificacao = classificarBatida(hora);
 
-      const storageRef = storage.ref().child(`selfies/${user.uid}_${Date.now()}.jpg`);
-      await storageRef.put(selfieBlob);
-      const selfieURL = await storageRef.getDownloadURL();
+        const selfieRef = storage.ref(`selfies/${user.uid}_${Date.now()}.jpg`);
+        await selfieRef.put(selfieBlob);
+        const selfieURL = await selfieRef.getDownloadURL();
 
-      const registro = {
-        uid: user.uid,
-        nome: document.getElementById("nomeUsuario").textContent,
-        setor: document.getElementById("setorUsuario").textContent,
-        horario: hora,
-        data,
-        classificacao,
-        selfieURL,
-        localizacaoOk
-      };
+        const registro = {
+          uid: user.uid,
+          nome: document.getElementById("nomeUsuario").textContent,
+          setor: document.getElementById("setorUsuario").textContent,
+          horario: hora,
+          data,
+          classificacao,
+          latitude,
+          longitude,
+          localizacaoOk,
+          selfieURL
+        };
 
-      await db.collection("registros").add(registro);
-      document.getElementById("mensagem").textContent = `Ponto registrado com sucesso às ${hora} como "${classificacao.toUpperCase()}"`;
-      document.getElementById("mensagem").className = "text-green-600 font-semibold";
-      document.getElementById("btnBaterPonto").disabled = true;
+        await db.collection("registros").add(registro);
+
+        document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
+        document.getElementById("mensagem").className = "text-green-600 font-semibold";
+        btnBater.disabled = true;
+      }, err => alert("Erro ao obter localização: " + err.message));
     }
-
-    // Início automático após carregamento
-    window.onload = verificarLocalizacao;
   </script>
 </body>
 </html>
